@@ -195,7 +195,7 @@ Display info on the selected entry (user, agent, group...)\&. For users, resourc
 
 .TP
 \fB/move\fR [groupname]
-Move the current buddy to the requested group\&. If no group is specified, then the buddy is moved to the default group\&. This command only works with users (not agents), at the moment\&. Tip: if the chatmode is enabled, you can use "/roster alternate" to jump to the moved buddy\&.
+Move the current buddy to the requested group\&. If no group is specified, then the buddy is moved to the default group\&. Tip: if the chatmode is enabled, you can use "/roster alternate" to jump to the moved buddy\&.
 
 .TP
 \fB/msay\fR begin|verbatim|send|abort
@@ -279,6 +279,10 @@ Send the requested status to the specified Jabber user\&.
 Note: this status will be overridden by subsequent "/status" commands\&. If you are using the auto\-away feature, the status will overridden too\&.
 
 Note: The jid can include a resource (i\&.e\&. user@server/resource)\&.
+
+.TP
+\fB/version\fR
+Display mcabber version
 
 .SH "CONFIGURATION FILE"
 
